[tool.isort]
profile = "black"
line_length = 79
multi_line_output = 3
include_trailing_comma = true
combine_as_imports = true
force_grid_wrap = 2
use_parentheses = true
remove_redundant_aliases = true
known_django = "django"
sections = "FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
skip_gitignore = true
skip = [".gitignore", ".dockerignore", ".venv"]
skip_glob = "**/migrations/*.py"


[tool.black]
line_length = 79
target-version = ['py311']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | migrations
  )/

)
'''

[project]
name = "we-all-code"
description = ""
version = "0.0.1"
license = {text = "MIT"}
readme = "README.md"
authors = [{name = "Ali Karbassi", email = "ali@weallcode.org"}]
requires-python = ">=3.11.9,<3.12"
dependencies = [
    "arrow>=1.3.0,<2.0.0",
    "boto3>=1.39.0,<2.0.0",
    "django>=5.2,<6.0",
    "django-active-link>=0.2.2,<0.3.0",
    "django-allauth[socialaccount]>=65.9.0,<66.0.0",
    "django-anymail>=13.0,<14.0",
    "django-appconf>=1.1.0,<2.0.0",
    "django-bootstrap3>=25.1,<26.0",
    "django-cleanup>=9.0.0,<10.0.0",
    "django-common-helpers>=0.9.2,<1.0.0",
    "django-cron>=0.6.0,<0.7.0",
    "django-debug-toolbar>=5.2.0,<6.0.0",
    "django-environ>=0.12.0,<0.13.0",
    "django-fullurl>=1.4,<2.0",
    "django-heroku>=0.3.1,<0.4.0",
    "django-html5>=1.0.0,<2.0.0",
    "django-import-export>=4.3.8,<5.0.0",
    "django-loginas>=0.3.11,<0.4.0",
    "django-meta>=2.5.0,<3.0.0",
    "django-nose>=1.4.7,<2.0.0",
    "django-recaptcha>=4.1.0,<5.0.0",
    "django-stdimage>=6.0.2,<7.0.0",
    "django-storages>=1.14,<2.0",
    "factory-boy>=3.3.3,<4.0.0",
    "gunicorn>=23.0.0,<24.0.0",
    "icalendar>=6.3.1,<7.0.0",
    "invoke>=2.2.0,<3.0.0",
    "json-logging-py>=0.2,<0.3",
    "mock>=5.2.0,<6.0.0",
    "pillow>=11.3.0,<12.0.0",
    "psycopg[binary]>=3.2.9,<4.0.0",
    "sentry-sdk>=2.32.0,<3.0.0",
]

[project.urls]
Repository = "https://github.com/weallcode/website"
Homepage = "https://github.com/weallcode/website"


