[project]
name = "we-all-code"
description = "Django web application for We All Code nonprofit coding education organization"
version = "0.0.1"
license = {text = "MIT"}
readme = "README.md"
authors = [{name = "Ali Karbassi", email = "ali@weallcode.org"}]
requires-python = ">=3.11,<3.12"

dependencies = [
    # Core Framework
    "django>=5.2,<6.0",

    # Database & Storage
    "psycopg[binary]>=3.2.9,<4.0.0",
    "boto3>=1.39.0,<2.0.0",
    "django-storages>=1.14,<2.0",

    # Authentication & Security
    "django-allauth[socialaccount]>=65.9.0,<66.0.0",
    "django-recaptcha>=4.1.0,<5.0.0",
    "django-loginas>=0.3.11,<0.4.0",

    # Email & Communications
    "django-anymail>=13.0,<14.0",

    # UI & Templates
    "django-bootstrap3>=25.1,<26.0",
    "django-active-link>=0.2.2,<0.3.0",
    "django-html5>=1.0.0,<2.0.0",
    "django-meta>=2.5.0,<3.0.0",

    # Image Processing
    "pillow>=11.3.0,<12.0.0",
    "django-stdimage>=6.0.2,<7.0.0",
    "django-cleanup>=9.0.0,<10.0.0",

    # Utilities & Helpers
    "arrow>=1.3.0,<2.0.0",
    "icalendar>=6.3.1,<7.0.0",
    "django-common-helpers>=0.9.2,<1.0.0",
    "django-fullurl>=1.4,<2.0",
    "django-appconf>=1.1.0,<2.0.0",

    # Admin & Data Management
    "django-import-export>=4.3.8,<5.0.0",

    # Background Tasks
    "django-cron>=0.6.0,<0.7.0",

    # Environment & Configuration
    "django-environ>=0.12.0,<0.13.0",
    "django-heroku>=0.3.1,<0.4.0",

    # Development & Debugging
    "django-debug-toolbar>=5.2.0,<6.0.0",
    "ruff>=0.8.0,<1.0.0",

    # Testing
    "django-nose>=1.4.7,<2.0.0",
    "factory-boy>=3.3.3,<4.0.0",
    "mock>=5.2.0,<6.0.0",

    # Production Server
    "gunicorn>=23.0.0,<24.0.0",

    # Monitoring & Logging
    "sentry-sdk>=2.32.0,<3.0.0",
    "json-logging-py>=0.2,<0.3",

    # Task Management
    "invoke>=2.2.0,<3.0.0",
]

[project.urls]
Repository = "https://github.com/weallcode/website"
Homepage = "https://github.com/weallcode/website"

[tool.ruff]
line-length = 79
target-version = "py311"
exclude = [
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".tox",
    ".venv",
    "_build",
    "buck-out",
    "build",
    "dist",
    "migrations",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-source-first-line = false
line-ending = "auto"

[tool.ruff.isort]
known-django = ["django"]
section-order = ["future", "standard-library", "django", "third-party", "first-party", "local-folder"]
combine-as-imports = true
force-wrap-aliases = true
split-on-trailing-comma = true

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = []
